Revision history for Hailo

{{$NEXT}}

0.58 2010-10-22 03:34:08

    - Forgot to remove "use Text::Unidecode;" from Words.pm after dropping
      that dependency in the previous release.

    - Skip utf8-text.t on Perl <5.12 due to differences in Unicode matching.

0.57 2010-10-21 01:25:09

    - Fix typo in Schema.pm which messed up the type of the token.text
      SQL column (only relevant to non-SQLite DBs)

    - More robust matching of non-word immediately following URIs

0.56 2010-10-18 05:15:10

    - Add Test::Expect and Test::Synopsis to TestRequires

    - Use YAML::XS in utf8-text.t for clarity, and make the test
      optional.

0.55 2010-10-16 17:58:00

    - Scrap the "normal word" matching constraint from the previous release.
      It was failing to match words like "4.1GB", causing an infinite loop.
      Instead, we now assign different spacing attributes to components of
      conjoined words of varying types (e.g. recognizing that "4.1GB" is a
      normal word ("4.1") followed by a postfix ("GB").

    - Don't match '>' as part of the URI in "<http://google.com>".

0.54 2010-10-16 10:10:19

    - Fix the previously broken `save_on_exit' so that it does what
      it's supposed to do.

      The `save_on_exit' option in Hailo.pm never worked, and nor did
      hailo's corresponding --autosave option. Fixed that by
      correcting some method name confusion, and solved a BUG by
      finally adding a test for this option.

0.53 2010-10-15 21:29:02

    - hailo command: Fix off-by-one error when reporting the number of lines
      learned when training.

    - Don't truncate the brain file after loading it with in_memory enabled.

    - Word tokenizer improvements:
      * Recognize "´" as an apostrophe when matching words.
      * Recognize a compound word like "anti-scientology" as a single word.
      * Put additional constraints on where a "normal word" can be matched.
        This enables it to match things like "3D" and "800x600" as single